Fix height of charts on mobile

--- a/stocksearch/src/app/charts/charts.component.css
+++ b/stocksearch/src/app/charts/charts.component.css
@@ -11,6 +11,6 @@
         margin-left: auto;
         margin-right: auto;
         width: 95%!important;
-        height: 600px;
+        height: 630px;
     }
 }
